  plot method.

* `term_count` checks for duplicate categories within tiers for hierarchical
  term lists.

IMPROVEMENTS

* `validate_model` now uses `classify` before validating to assign tags.

* `tag_co_occurrence` used a grid + base plotting approach that required
  restarting the graphics device between plots.  This dependency has been
  replaces with a dependency on **ggnetwork** for plotting networks as grid
  objects.

* `plot.validate_model` now shows tag counts in the sample to provide a relative
  importance of the accuracy in making decisions.

* Open, unescaped or regexes [(i.e., `|)` unescaped pipe followed by a closing
  group character] are now caught and warned for `read_term_list` and thus
  `term_count`.

CHANGES

* `as_dtm` & `as_tdm` moved to the **gofastr** package where they can be used by
  other packages and their classed objects.  **termco** re-exports the two
  functions.

* `summary.validate_model` used to return `n` which was the number of tags from
  the `termco` object.  It now gives n.tags and n.classified to be more explicit
  about counts of potential tags and tags actually assigned by `classify`.

termco 0.4.0 - 0.4.3
----------------------------------------------------------------

NEW FEATURES

* `term_cols` & `group_cols` added to quickly grab just term or grouping
  variable columns.

* `as_dtm` & `as_tdm` added to convert a `term_count` object into a
  `tm::DocumentTermMatrix` or `tm::TermDocumentMatrix` object.

* `update_names` added to allow for safe renaming of a `term_count` object's
  columns while also updating its attributes as well.

IMPROVEMENTS

* `classify` picks up a new default `ties.method` type of `"probabilities"`.
  This used the probability distribution from all tags assigned to randomly
  break ties based on that distribution.

* `term_count` gets an auto-collapse feature for hierarchical `term.list`s with
  duplicate names.  A message is printed telling the user this is happening.  To